@@ -24,31 +24,10 @@
 					</excludeResources>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
-				<!-- compile the aspect files -->
-				<groupId>org.codehaus.mojo</groupId>
+				<groupId>dev.aspectj</groupId>
 				<artifactId>aspectj-maven-plugin</artifactId>
-				<version>${aspectj-maven-compiler-version}</version>
-				<executions>
-					<execution>
-						<phase>process-sources</phase>
-						<id>compile</id>
-						<configuration>
-							<source>1.7</source>
-							<target>1.7</target>
-							<complianceLevel>1.7</complianceLevel>
-							<aspectDirectory>src</aspectDirectory>
-							<XnotReweavable>true</XnotReweavable>
-							<Xlint>ignore</Xlint>
-							<deprecation>true</deprecation>
-						</configuration>
-						<goals>
-							<goal>compile</goal>
-							<goal>test-compile</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 
 			<plugin>
@@ -75,8 +54,8 @@
 					<useUIHarness>true</useUIHarness>
 					<forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
 					<showEclipseLog>true</showEclipseLog>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m ${tycho.surefire.extra.vmargs}</argLine>
-					
+					<argLine>-Xmx1024m ${tycho.surefire.extra.vmargs}</argLine>
+
 					<testClass>org.eclipse.ajdt.ui.tests.AllAJDTUITests</testClass>
 
 					<testFailureIgnore>true</testFailureIgnore>
@@ -109,7 +88,9 @@
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>target-platform-configuration</artifactId>
+				<version>${tycho-version}</version>
 				<configuration>
+					<executionEnvironment>JavaSE-11</executionEnvironment>
 					<dependency-resolution>
 						<extraRequirements>
 							<requirement>
